# image-prompt-optimizer

./: .env.example  .gitignore  CLAUDE.md  Makefile  blueprint.md  execute_tests.sh  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/image-providers-research/: SKILL.md
.claude/skills/prompt-engineering-research/: SKILL.md
.claude/skills/sfumato-implement/: SKILL.md
app/models/: domain_models.py  request_models.py  response_models.py
app/prompts/: llm_judge_prompt.jinja2  llm_prompt_gen.jinja2  llm_prompt_revise.jinja2  sys_cmd_prompt.jinja2
app/prompts/providers/: grok_prompting_guide.md  nano_banana_prompting_guide.md  openai_prompting_guide.md
app/prompts/templates/: grok_text_llm.jinja2  nano_banana_text_llm.jinja2  openai_text_llm.jinja2
app/tools/: log_tool.py
app/utils/: string_utils.py  time_utils.py
docs/: ux_draft.jsx
scripts/: jira_tool.py
tests/: test_models.py
